[Mac] MediaFormatReader.bundle fails to load in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=219879

Reviewed by Eric Carlson.

* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize): Tell CoreMedia to allow unsigned format reader
plug-ins when running in WebKitTestRunner. This resolves test timeouts under
LayoutTests/webgl/2.0.0/.


Canonical link: https://commits.webkit.org/232466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270812 268f45cc-cd09-0410-ab3c-d52691b4dbfc