Tools/WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm
@@ -74,6 +74,9 @@ void InjectedBundle::platformInitialize(WKTypeRef initializationUserData)
     };
 
     [[NSUserDefaults standardUserDefaults] setVolatileDomain:dict forName:NSArgumentDomain];
+    
+    // For testing in engineering builds, allow CoreMedia to load the MediaFormatReader bundle no matter its code signature.
+    CFPreferencesSetAppValue(CFSTR("pluginformatreader_unsigned"), kCFBooleanTrue, CFSTR("com.apple.coremedia"));
 
     // Underlying frameworks have already read AppleAntiAliasingThreshold default before we changed it.
     // A distributed notification is delivered to all applications, but it should be harmless, and it's the only way to update all underlying frameworks anyway.
